# GeneFlow-Datalake

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  init_schema.py  main.py  pyproject.toml  requirements.txt
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: cd.yml  ci.yml  release.yml
docs/: MEMORIA_TFT.md
scripts/: coverage_summary.py
src/: api.py  bootstrap.py  buffer.py  config.py  constants.py  consumer.py  deduplication.py  lifecycle.py  main.py  models.py  retry.py
src/api/: __init__.py  api.py  app.py
src/api/auth/: __init__.py  api_key.py  dependencies.py
src/api/exceptions/: __init__.py  handlers.py
src/api/middleware/: __init__.py  correlation.py  logging.py
src/api/reponses/: __init__.py
src/api/responses/: __init__.py  error_response.py  events_response.py  health_response.py  replay_response.py
src/api/routes/: __init__.py  categories.py  dlq.py  events.py  health.py  replay.py
src/api/services/: __init__.py  category_stats_service.py  dlq_service.py  (+1 more)
src/buffer/: __init__.py  event_buffer.py  wal.py
src/config/: __init__.py  constants.py  settings.py
src/consumer/: __init__.py  buffer.py  consumer.py  deduplication.py  message_parser.py  retry.py
src/models/: __init__.py  events.py  retry.py
src/mounters/: __init__.py  base.py  engine.py  setup.py
src/retry/: __init__.py  backoff.py  dlq.py  retry_handler.py
src/storage/: __init__.py  local.py  minio.py  storage.py  supabase.py
src/utils/: __init__.py  dates.py  files.py  logging.py
tests/: conftest.py  test_api.py  test_api_auth.py  test_api_middleware.py  test_api_services.py  test_backoff.py  test_bootstrap.py  test_buffer.py  test_config.py  test_consumer.py  test_consumer_branches.py  test_deduplication.py  test_lifecycle.py  test_lifecycle_branches.py  test_message_parser.py  test_models.py  test_retry.py  test_retry_branches.py  test_storage.py  test_storage_minio.py  test_storage_supabase.py  test_utils.py  test_utils_logging.py  test_wal.py
tests/mounters/: __init__.py  test_chunking.py  test_chunking_more.py  test_engine.py  test_handlers.py  test_metadata_service.py  test_photo_validator.py  test_profile_photo_handler.py  test_qdrant_mounter.py  test_storage_connection.py  test_storage_mounter.py  test_thumbnail_service.py  test_trace_handler.py
(+64 files in other folders)
